syntax = "proto3";

package kong.admin.service.v1;

option go_package = "github.com/kong/koko/internal/gen/kong/admin/service/v1;v1";

import "google/api/annotations.proto";
import "kong/admin/model/v1/upstream.proto";
import "kong/admin/model/v1/cluster.proto";
import "kong/admin/model/v1/pagination.proto";

service UpstreamService {
  rpc GetUpstream(GetUpstreamRequest) returns (GetUpstreamResponse) {
    option (google.api.http) = {
      get: "/v1/upstreams/{id}"
    };
  }
  rpc CreateUpstream(CreateUpstreamRequest) returns (CreateUpstreamResponse) {
    option (google.api.http) = {
      post: "/v1/upstreams"
      body: "item"
    };
  }
  rpc UpsertUpstream(UpsertUpstreamRequest) returns (UpsertUpstreamResponse) {
    option (google.api.http) = {
      put: "/v1/upstreams/{item.id}"
      body: "item"
    };
  }
  rpc DeleteUpstream(DeleteUpstreamRequest) returns (DeleteUpstreamResponse) {
    option (google.api.http) = {
      delete: "/v1/upstreams/{id}"
    };
  }
  rpc ListUpstreams(ListUpstreamsRequest) returns (ListUpstreamsResponse) {
    option (google.api.http) = {
      get: "/v1/upstreams"
    };
  }
}

message GetUpstreamRequest{
  string id = 1;
  model.v1.RequestCluster cluster = 2;
}

message GetUpstreamResponse{
  model.v1.Upstream item = 1;
}

message CreateUpstreamRequest{
  model.v1.Upstream item = 1;
  model.v1.RequestCluster cluster = 2;
}

message CreateUpstreamResponse{
  model.v1.Upstream item = 1;
}


message UpsertUpstreamRequest{
  model.v1.Upstream item = 1;
  model.v1.RequestCluster cluster = 2;
}

message UpsertUpstreamResponse{
  model.v1.Upstream item = 1;
}

message DeleteUpstreamRequest{
  string id = 1;
  model.v1.RequestCluster cluster = 2;
}

message DeleteUpstreamResponse{
}

message ListUpstreamsRequest{
  model.v1.RequestCluster cluster = 1;
  model.v1.PaginationRequest page = 2;
}

message ListUpstreamsResponse{
  repeated model.v1.Upstream items = 1;
  model.v1.PaginationResponse page = 2;
}
